--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,10 @@
     font-family: "Work Sans", sans-serif;
 }
 
+body{
+    margin: 0px;
+}
+
 .flex-box{
     display: flex;
 }
@@ -31,7 +35,24 @@
     border-radius: 10px;
     font-weight:600;
     font-size: 1.5em;
+    margin-top: 1.5em;
 }
+
+main > section{
+    margin-top: 120px;
+}
+
+.max-width{
+    max-width: 1440px;
+    /* max-width: 1040px; */
+    margin: 0px auto;
+}
+
+.section_heading{
+    font-size: 2.25em;
+    font-weight: bold;
+}
+
 
 /* header style */
 
@@ -62,11 +83,6 @@ a{
     font-weight: 500;
 }
 
-.navbar,.banner{
-    max-width: 1440px;
-    max-width: 1040px;
-    margin: 0px auto;
-}
 
 /* banner related styles */
 
@@ -86,10 +102,47 @@ a{
     width: 100%;
 }
 
+/* main styles */
+
+/* teams related styles */
+
+.teams{
+    align-items: center;
+    margin-top: 120px;
+}
+
+.teams_img_box{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 120px;
+    max-width: 530px;
+}
+
+#quick-list{
+    font-weight: 500;
+}
+
+#features{
+    color: #FF900E;
+}
+
+
 /* responsive media queries */
 
 @media screen and (max-width:576px) {
-    .navbar{
+    .navbar, .teams{
         flex-direction: column;
+    }
+
+    .teams_img_box{
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    .our-features{
+        margin: 30px;
     }
 }
