the page is created completely and designed to be responsive

--- a/style/style.css
+++ b/style/style.css
@@ -3,52 +3,52 @@
 
 /* shared style */
 
-.font-family{
+.font-family {
     font-family: "Work Sans", sans-serif;
 }
 
-body{
+body {
     margin: 0px;
 }
 
-.flex-box{
+.flex-box {
     display: flex;
 }
 
-.dark-1{
+.dark-1 {
     color: #131313;
 }
 
-.dark-2{
-    color:#424242;
+.dark-2 {
+    color: #424242;
 }
 
-.dark-3{
+.dark-3 {
     color: #727272;
 }
 
-.btn-primary{
+.btn-primary {
     background-color: #FF900E;
     color: white;
     padding: 20px 25px;
     border: none;
     border-radius: 10px;
-    font-weight:600;
+    font-weight: 600;
     font-size: 1.5em;
     margin-top: 1.5em;
 }
 
-main > section{
+main>section {
     margin-top: 120px;
 }
 
-.max-width{
-    max-width: 1440px;
-    /* max-width: 1040px; */
+.max-width {
+    /* max-width: 1440px; */
+    max-width: 1040px;
     margin: 0px auto;
 }
 
-.section_heading{
+.section_heading {
     font-size: 2.25em;
     font-weight: bold;
 }
@@ -58,26 +58,26 @@ main > section{
 
 /* nav related style  */
 
-.bg_1{
+.bg_1 {
     background-color: rgba(255, 144, 14, 0.1);
 }
 
-.navbar{
+.navbar {
     justify-content: space-between;
     align-items: center;
 }
 
-.brand{
+.brand {
     font-weight: bold;
     font-size: 2.5em;
 }
 
-.nav-list{
+.nav-list {
     gap: 30px;
     list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
@@ -86,19 +86,19 @@ a{
 
 /* banner related styles */
 
-.banner-content{
+.banner-content {
     max-width: 860px;
     margin: 0px auto;
     text-align: center;
     margin-bottom: 50px;
 }
 
-.banner-heading{
+.banner-heading {
     font-size: 4em;
     font-weight: bold;
 }
 
-.banner-image{
+.banner-image {
     width: 100%;
 }
 
@@ -106,43 +106,230 @@ a{
 
 /* teams related styles */
 
-.teams{
+.teams {
     align-items: center;
     margin-top: 120px;
 }
 
-.teams_img_box{
+.teams_img_box {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 24px;
 }
 
-.our-features{
+.our-features {
     margin-left: 120px;
     max-width: 530px;
 }
 
-#quick-list{
+#quick-list {
     font-weight: 500;
 }
 
-#features{
+#span_2 {
     color: #FF900E;
+}
+
+/* features related */
+
+.features {
+    max-width: 1240px;
+    margin: 0px auto;
+    gap: 140px;
+    margin-top: 120px;
+}
+
+#f_heading {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+    margin: 10px 0px;
+}
+
+.feature_title {
+    margin: 10px 0px;
+}
+
+.f_card {
+    max-width: 586px;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+}
+
+.f_card p {
+    max-width: 585;
+    margin: 8px 0px;
+}
+
+#experience-badge {
+    padding: 45px 42px;
+    margin-left: -90px;
+    margin-top: -77px;
+}
+
+#experience-years {
+    font-size: 4rem;
+    font-weight: 600;
+}
+
+/* facts related styles */
+
+#f_m-w {
+    max-width: 1240px;
+    margin: 0px auto;
+    margin-top: 120px;
+}
+
+.facts-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 30px;
+}
+
+.facts {
+    width: 240px;
+    height: 240px;
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.fact-heading {
+    text-align: center;
+}
+
+.fact-heading h3 {
+    margin: 20px;
+}
+
+.fact-number {
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin: 10px 0px;
+}
+
+.fact-name {
+    margin: 5px 0px;
+}
+
+.facts_description {
+    margin-bottom: 36px;
+}
+
+/* sponsors related styles */
+
+.our-sponsors{
+    margin-top: 120px;
+}
+
+.companies-heading-div {
+    max-width: 542px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img {
+    filter: grayscale(100%);
+}
+
+footer{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+footer p{
+    font-size: 1rem;
+    text-align: center;
+    max-width: 1040px;
+    margin: 0px auto;
+    margin-top: 100px;
+    padding: 10px;
 }
 
 
 /* responsive media queries */
 
 @media screen and (max-width:576px) {
-    .navbar, .teams{
+
+    .navbar,
+    .teams,
+    .features {
         flex-direction: column;
     }
 
-    .teams_img_box{
-        grid-template-columns: repeat(1,1fr);
+    .teams_img_box,
+    .facts-container,
+    .sponsor-companies {
+        grid-template-columns: repeat(1, 1fr);
     }
 
-    .our-features{
+    #experience-badge {
+        padding: 20px;
+        margin-left: 50px;
+        margin-top: 10px;
+    }
+
+    .architector-img img {
+        width: 100%;
+    }
+
+
+
+    .fact-heading {
+        text-align: center;
+    }
+
+    .facts-container {
+        justify-items: center;
+        gap: 20px;
+    }
+
+    .sponsor-companies {
+        justify-items: center;
+        gap: 50px;
+    }
+
+    .our-features {
         margin: 30px;
     }
+}
+
+/* responsive for medium devices */
+
+@media screen and (min-width:577px) and (max-width:992px) {
+
+    .teams,
+    .features {
+        flex-direction: column;
+    }
+
+    .facts-container,
+    .sponsor-companies {
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+        gap: 50px;
+    }
+
+    .features {
+    max-width: 990px;
+    margin: 100px auto;
+    }
+    #experience-badge {
+        padding: 20px;
+        margin-left: 80px;
+        margin-top: 10px;
+    }
+
+    .fact-heading {
+        text-align: center;
+
+    }
+
 }
